2002-04-03  Masatake YAMATO  <yamato@redhat.com>

	* configure.in: Version 0.30.

	* exception.c (at_exception_new): Fix wrong 
	parameter declaration.

2002-04-03  Martin Weber <martweb@gmx.net>

	* exception.h (at_exception_new): Fix wrong 
	parameter declaration.

	* input-pnm.c (struct _PNMRowInfo): Removed.

	Message-ID: <3CA9F839.6A4C291C@gmx.net>.
	
2002-03-30  Martin Weber <martweb@gmx.net>

	* output-swf.c (output_swf_writer): printed
	warning if autotrace runs on windows.

	* autotrace.dsp: Updated.

	* autotrace.vcproj: Updated.

	Message-ID: <3CA74273.90B1D7EF@gmx.net>.

2002-03-30  Martin Weber <martweb@gmx.net>

	* main.c: fixed to remove some compiler warnings in
	main.c
	(dump): used at_bitmap_get_planes.

	Message-ID: <3CA737A7.40D2330D@gmx.net>.

2002-03-31  Masatake YAMATO  <yamato@redhat.com>

	* configure.in: Create a pre release(0.30pre2).

2002-03-30  Martin Weber <martweb@gmx.net>

	* output-emf.c: Removed unnecessary #define, 
	set pen width to zero when in outline mode. Now checking whether 
	it should write to stdout only for Windows.

	Message-ID: <3CA4C008.8B921285@gmx.net>.
	
2002-03-30  Martin Weber <martweb@gmx.net>

	* output-pdf.c (out_splines): Reduced color precision to get 
	smaller files.

	* output-p2e.c (out_splines): Likewise.

	* output-eps.c (out_splines): Likewise.

	* output-epd.c (out_splines): Likewise.

	* main.c (main): using binary mode for dumping bitmaps.

	* pxl-outline.c (*): The y values of the outline were always to 
	high by one.

	Message-ID: <3CA3853C.629CCFD6@gmx.net> and
	Message-ID: <3CA57C3F.C35F60F7@gmx.net>.

2002-03-30  Masatake YAMATO  <yamato@redhat.com>

	* pxl-outline.c (find_outline_pixels): moved
	test_cancel func to inner loop.

2002-03-28  Martin Weber <martweb@gmx.net>

	* HACKING (Tools for debugging output): Updated.

	* README: Updated.

	* output.c (output_formats): Unify dxf output entry.

	* main.c (USAGE1): dpi is used in mif output,
	not emf.
